--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -66,6 +66,10 @@
         grid-template-columns: 1rem [header-start] 1fr [header-end] 1rem;
         grid-template-rows: min-content 20rem minmax(min-content, max-content);
     }
+
+    @media only screen and (max-width: $bp-small) {
+        grid-template-rows: min-content 10rem minmax(min-content, max-content);
+    }
 }
 
 .navigation {
